Mon Aug 21 15:58:19 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	
	* src/fe-gnome/preferences-page-plugins.h:
	* src/fe-gnome/preferences-page-plugins.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-dialog.c:
	  - Rename PreferencesPluginsPage to PreferencesPagePlugins.
	  - "GObjectize" PreferencesPagePlugins.

Sun Aug 20 14:35:49 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* data/xchat-gnome-remote.1:
	* data/Makefile.am:
	  - Remove xchat-gnome-remote's manpage since this
	    executable will not exist anymore after the next sync.

Sat Aug 19 18:06:15 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	  - Remove tooltip when the mouse leaves the window. (#347046)

Wed Aug 16 20:06:00 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/plugins.c:
	  - Fix a leak with gconf_client.
	  - If a plugin is not found, it's removed from the autoload
	    list. First part of the migration path for the dbus plugin.

2006-08-14  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/main-window.c:
	- Use HIG shortcut key for Help. Bug #350919.

Sun Aug 13 19:14:03 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	A plugins/perl/CVS:
	A plugins/perl/CVS/Repository:
	A plugins/perl/CVS/Root:
	A plugins/perl/CVS/Entries:
	* plugins/perl/Xchat.pm:
	* plugins/perl/generate_header:
	* plugins/perl/perl.c:
	* plugins/perl/xchat2-perl.html:
	  - Update the perl plugin from xchat CVS, and add the CVS directory
	    so we can update more easily in the future. (#349063)

Sun Aug 13 16:41:11 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	   - Add a trailing ellipsis in the "Connect" menu entry (#350944)

Tue Aug  1 11:05:51 PDT 2006  David Trowbridge <trowbrds@gmail.com>

	* po/en_GB.po:
	* po/nb.po:
	* po/el.po:
	* po/de.po:
	  - Update from rosetta

Tue Aug  1 13:16:14 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c: